--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>
-      Blow the candle</h1>
+      Make a wish!and blow the candle</h1>
      <div class="glow" id="glow"></div>
      <div id="candle">
        <div class="stripe"></div>
