--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <title>Happy Birthday Imen</title>
+    <title>Happy Birthday my darling</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <link rel="icon" href="Fly Bats logo.png">
